--- a/CommandWrapper/MVVM/View/FoobarControl.xaml
+++ b/CommandWrapper/MVVM/View/FoobarControl.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CommandWrapper.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{Binding BasicThreadFoobar, Source={StaticResource Locator}}"
+             d:DataContext="{Binding AsyncKeyword, Source={StaticResource Locator}}"
              Loaded="FoobarControl_OnLoaded">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -34,10 +34,16 @@
         </ItemsControl>
         <ScrollViewer x:Name="ConsoleViewer"
                       Grid.Column="1">
+            <ScrollViewer.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Clear" Command="{Binding ClearConsoleTextCommand}"/>
+                </ContextMenu>
+            </ScrollViewer.ContextMenu>
             <TextBlock Text="{Binding ConsoleText}"
                        TextWrapping="Wrap"
                        Background="DarkBlue"
-                       Foreground="White" />
+                       Foreground="White">
+            </TextBlock>
         </ScrollViewer>
     </Grid>
 </UserControl>
